Fixed: scrollbar & layout

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -1,4 +1,3 @@
-
 /***********GENERAL**********/
 * {
     margin: 0;
@@ -10,41 +9,42 @@ body {
     background-color: #dbdbd2;
 }
 
-main {height: 100vh;}
-
 /******BACKGROUND WRAP******/
 
 .wrap-bar {
-    background-color:#009688;
+    background-color: #009688;
     height: 90px;
 }
 
 /******LAYOUT******/
 
-.main-chat { 
+.main-chat {
     display: flex;
     justify-content: center;
     align-items: center;
 }
 
 .container {
-    width: 90%;  
     height: 90%;
     margin: auto;
     display: flex;
+    justify-content: center;
     position: absolute;
     top: 5%;
 }
 
-.col-50 {width: 50%;}
+.col-50 {
+    width: 50%;
+}
 
 .col-40 {
-    width: 40%;
+    max-width: 40%;
     background-color: white;
-    overflow-y: auto;
 }
 
 .col-60 {
+    display: flex;
+    flex-direction: column;
     width: 60%;
     background-image: url(/assets/img/mine.jpg);
 }
@@ -61,9 +61,9 @@ main {height: 100vh;}
     height: 60px;
 }
 
-.user-img-container{
+.user-img-container {
     display: flex;
-    align-items: center;  
+    align-items: center;
 }
 
 .user-img {
@@ -77,12 +77,14 @@ main {height: 100vh;}
 }
 
 /*** ROW NOTIFICATIONS ***/
-
 .notifications {
-    background-color:  #8edafc;
+    background-color: #8edafc;
     height: 70px;
     display: flex;
     align-items: center;
+    font-size: 12px;
+    padding: 6px;
+    
 }
 
 .notifications span {
@@ -98,6 +100,7 @@ main {height: 100vh;}
     font-size: 20px;
     margin: 0 10px 0 10px;
 }
+
 .notifications > div > p:nth-child(2) {
     color: grey;
     text-decoration: underline;
@@ -105,7 +108,7 @@ main {height: 100vh;}
 
 /*** ROW SEARCHBAR ***/
 .searchbar-wrap {
-    background-color: #fafafa ;
+    background-color: #fafafa;
 }
 
 .searchbar-container {
@@ -115,8 +118,8 @@ main {height: 100vh;}
     align-items: center;
     padding: 3px;
     color: grey;
-    
 }
+
 .searchbar-container span {
     width: 20%;
     height: 30px;
@@ -130,24 +133,25 @@ main {height: 100vh;}
     width: 100%;
     height: 30px;
     font-size: 10px;
-    border:1px solid rgb(228, 225, 225);
+    border: 1px solid rgb(228, 225, 225);
     padding: 10px;
 }
 
 /*** DINAMIC CONTACTS ***/
-
 .container-contacts {
     background-color: white;
+    overflow-y: auto;
+    height: calc(100% - 170px);
 }
 
 .section-contacts {
     height: 60px;
-    display: flex; 
+    display: flex;
     justify-content: space-between;
     border: 1px solid rgb(228, 225, 225);
 }
 
-.section-contacts  figure{
+.section-contacts figure {
     display: flex;
     border-radius: 100%;
     font-size: 22px;
@@ -170,33 +174,23 @@ main {height: 100vh;}
 .contact-card {
     display: flex;
 }
+
 /*************RIGHT COL - COL-60 ***************/
 
-.col-60 {
-    display: flex;
-    flex-direction: column;
-    position: relative;
-    overflow-y: auto;
-}
-
-.active-contact-chat {
-    height: 200px;
-}
 
 .col-60 > section:nth-child(1),
-.col-60 > section:nth-child(3)  {
+.col-60 > section:nth-child(3) {
     display: flex;
     background-color: #eaeaea;
     height: 60px;
     align-items: center;
-    position: sticky;
+    flex-grow: 0;
+    flex-shrink: 0;
     top: 0;
 }
 
-.col-60 > section:nth-child(3) {  
-    bottom: 0;
-    padding: 6px;
-
+.col-60 > section:nth-child(3) {
+    display: flex;
 }
 
 .last-access {
@@ -206,12 +200,9 @@ main {height: 100vh;}
 /***WRAP CHAT***/
 
 /***ROW TEXTBAR CHAT***/
-.section-fixed {
-    height: 60px;
-}
+
 .textbar-container {
     width: 100%;
-    height: 40px;
     display: flex;
     align-items: center;
     padding: 3px;
@@ -234,18 +225,17 @@ main {height: 100vh;}
 }
 
 /***DINAMIC CHAT**/
-.chat-area {
-    
+.chat-area {  
     display: flex;
-    flex-direction: column;
     padding: 30px;
+    overflow-y: auto;
 }
 
-.badge{ 
+.badge {
     background-color: white;
     border-radius: 4px;
     padding: 10px;
-    width: 40%; 
+    width: 40%;
 }
 
 .send {
@@ -253,13 +243,9 @@ main {height: 100vh;}
 }
 
 .received {
-    background-color:#d5f9ba;
+    background-color: #d5f9ba;
     position: absolute;
     right: 0;
     margin-right: 30px;
-   
 }
 
-.row-chat {
-    height: 100%;
-}
